Hourly scheduled redeploy 80eed232c4c17e270cb3c93526b231089bc080dc

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--36">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207016.pt">Rede Britânica de Ciência e Inovação traz palestra do carro mais veloz do mundo a estudantes e professores do SENAI-SP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/188434.lt">JK bus surengtas G8 šalių susitikimas demencijos klausimais</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/remembrance-sunday">Remembrance Sunday</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-universities-and-science-in-paris--2">Minister for Universities and Science in Paris</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-in-havana-has-a-vacancy--2">Job opportunities at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212806.th">เรือรบหลวงแดริ่ง (HMS Daring) กองทัพเรือแห่งสหราชอาณาจักรเยือนไทย</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/hm-ambassadors-eid-message--2">HM Ambassador&rsquo;s Eid message</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-zagreb-closed-for-easter-holidays">British Embassy Zagreb and British consulates are closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-discusses-green-economy-with-uzbek-students--2">British Ambassador discusses green economy with Uzbek students</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210686.zh-tw">台英組織簽訂合作，開放資料邁向國際</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
