--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/hm-ambassadors-eid-message--2">HM Ambassador&rsquo;s Eid message</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-zagreb-closed-for-easter-holidays">British Embassy Zagreb and British consulates are closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/slovenia-v-england-football-match-travel-advice--2">Slovenia v England football match travel advice</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--4">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-discusses-green-economy-with-uzbek-students--2">British Ambassador discusses green economy with Uzbek students</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--3">Top tips for UK student visa applicants</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/210686.zh-tw">台英組織簽訂合作，開放資料邁向國際</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
