Hourly scheduled redeploy 80eed232c4c17e270cb3c93526b231089bc080dc

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294453.pt">VISITA REAL</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/disruption-to-emergency-contact-numbers-for-consular-assistance--3">Disruption to emergency contact numbers for consular assistance in Portugal</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-goa--2">Advice for British nationals in Goa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/237972.es">José Ignacio Sánchez Galán, Presidente de Iberdrola,  miembro de la Orden del Imperio Británico</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/coca-cola-winners-off-to-the-2015-rugby-world-cup-in-england--2">Coca-Cola winners off to the 2015 Rugby World Cup in England</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171667.pt">Desafio GREAT levará jovens jornalistas `a Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/270679.pt">#TraintasticTales</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--6">國家海洋安全戰略</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/royal-baby-pm-statement">Royal baby: PM statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/eu-member-states-embassies-mark-climate-change-day-in-tashkent">EU Member States’ embassies mark Climate Change Day in Tashkent</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applications-in-iceland--2">UK Visa Applications in Iceland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/207016.pt">Rede Britânica de Ciência e Inovação traz palestra do carro mais veloz do mundo a estudantes e professores do SENAI-SP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
