--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -371,16 +371,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.west-norfolk.gov.uk">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.monmouthshire.gov.uk">Monmouthshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.northdown.gov.uk">North Down Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.medway.gov.uk">Medway Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chiltern.gov.uk">Chiltern District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.crawley.gov.uk">Crawley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.thanet.gov.uk">Thanet District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.liverpool.gov.uk">Liverpool City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ealing.gov.uk">London Borough of Ealing Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.antrim.gov.uk/">Antrim Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
