Hourly scheduled redeploy 80eed232c4c17e270cb3c93526b231089bc080dc

--- a/apps/specialist-publisher.html
+++ b/apps/specialist-publisher.html
@@ -423,8 +423,8 @@
       <li><a href="https://www.gov.uk/drug-device-alerts" class="govuk-link">Alerts and recalls for drugs and medical devices</a></li>
       <li><a href="https://www.gov.uk/service-standard-reports/dvla-webchat-alpha-assessment" class="govuk-link">DVLA Webchat - Alpha Assessment</a></li>
       <li><a href="https://www.gov.uk/drug-safety-update/covid-19-vaccines-and-medicines-updates-for-march-2021" class="govuk-link">COVID-19 vaccines and medicines: updates for March 2021</a></li>
-      <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-15-to-19-march-2021" class="govuk-link">Field Safety Notices: 15 to 19 March 2021</a></li>
       <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies" class="govuk-link">UK Market Conformity Assessment Bodies</a></li>
+      <li><a href="https://www.gov.uk/aaib-reports" class="govuk-link">Air Accidents Investigation Branch reports</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
