--- a/document-types/aaib_report.html
+++ b/document-types/aaib_report.html
@@ -381,8 +381,8 @@
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-bae-atp-se-mao">AAIB investigation to BAe ATP, SE-MAO  </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-pitts-s-2a-pitts-special-g-odds">AAIB investigation to Pitts S-2A Pitts Special, G-ODDS</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rans-s6-116-coyote-ii-g-buwk">AAIB investigation to Rans S6-116 Coyote II, G-BUWK</a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-cessna-f150k-g-bjov">AAIB investigation Cessna F150K, G-BJOV  </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-piaggio-p-180-avanti-ii-d-ippy">AAIB investigation to Piaggio P 180 Avanti II, D-IPPY  </a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-dji-matrice-200-v1-uas-registration-n-slash-a-210919">AAIB investigation to DJI Matrice 200 V1, (UAS, registration n/a) 210919</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=aaib_report&amp;count=10">Source query from Search API</a></p>
 
