--- a/document-types/fatality_notice.html
+++ b/document-types/fatality_notice.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/fatalities/lieutenant-philip-d-green-rn">Six Royal Navy personnel killed in Iraq</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/colour-sergeant-john-cecil-rm">Eight personnel from 3 Commando Brigade killed in Iraq</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/sergeant-luke-taylor-and-lance-corporal-michael-foley-killed-in-afghanistan">Sergeant Luke Taylor and Lance Corporal Michael Foley killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/lieutenant-philip-d-green-rn">Six Royal Navy personnel killed in Iraq</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/second-lieutenant-joanna-yorke-dyer-corporal-kris-oneill-private-eleanor-dlugosz-and-kingsman-adam-james-smith-killed-in-iraq">Second Lieutenant Joanna Yorke Dyer, Corporal Kris O&#39;Neill, Private Eleanor Dlugosz and Kingsman Adam James Smith killed in Iraq</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/corporal-david-oconnor-and-corporal-channing-day-killed-in-afghanistan">Corporal David O&#39;Connor and Corporal Channing Day killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/colour-sergeant-john-cecil-rm">Eight personnel from 3 Commando Brigade killed in Iraq</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/lieutenant-john-thornton-and-marine-david-marsh-killed-in-afghanistan">Lieutenant John Thornton and Marine David Marsh killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/major-matthew-james-collins-and-lance-sergeant-mark-terence-burgan-killed-in-afghanistan">Major Matthew James Collins and Lance Sergeant Mark Terence Burgan killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/lance-corporal-jamie-webb-killed-in-afghanistan">Lance Corporal Jamie Webb killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/sapper-luke-allsopp">Staff Sergeant Simon Cullingworth and Sapper Luke Allsopp killed in Iraq</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/serjeant-paul-mcaleese-and-private-johnathon-young-killed-in-afghanistan">Serjeant Paul McAleese and Private Johnathon Young killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/lieutenant-john-charles-sanderson-dies-of-wounds-sustained-in-afghanistan">Lieutenant John Charles Sanderson dies of wounds sustained in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/lance-corporal-jamie-webb-killed-in-afghanistan">Lance Corporal Jamie Webb killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/guardsman-neil-tony-downes-killed-in-afghanistan">Guardsman Neil &lsquo;Tony&rsquo; Downes killed in Afghanistan</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=fatality_notice&amp;count=10">Source query from Search API</a></p>
 
