--- a/document-types/open_consultation.html
+++ b/document-types/open_consultation.html
@@ -378,11 +378,11 @@
 <li><a href="https://www.gov.uk/government/consultations/regulating-healthcare-professionals-protecting-the-public">Regulating healthcare professionals, protecting the public</a></li>
 <li><a href="https://www.gov.uk/government/consultations/mandatory-climate-related-financial-disclosures-by-publicly-quoted-companies-large-private-companies-and-llps">Mandatory climate-related financial disclosures by publicly quoted companies, large private companies and LLPs</a></li>
 <li><a href="https://www.gov.uk/government/consultations/introduction-of-a-deposit-return-scheme-in-england-wales-and-northern-ireland">Introduction of a deposit return scheme in England, Wales and Northern Ireland</a></li>
-<li><a href="https://www.gov.uk/government/consultations/restoring-trust-in-audit-and-corporate-governance-proposals-on-reforms">Restoring trust in audit and corporate governance: proposals on reforms</a></li>
 <li><a href="https://www.gov.uk/government/consultations/local-authority-remote-meetings-call-for-evidence">Local authority remote meetings: call for evidence</a></li>
-<li><a href="https://www.gov.uk/government/consultations/raising-standards-in-the-tax-advice-market">Raising standards in the tax advice market</a></li>
+<li><a href="https://www.gov.uk/government/consultations/restoring-trust-in-audit-and-corporate-governance-proposals-on-reforms">Restoring trust in audit and corporate governance: proposals on reforms</a></li>
 <li><a href="https://www.gov.uk/government/consultations/transfer-pricing-documentation">Transfer pricing documentation</a></li>
-<li><a href="https://www.gov.uk/government/consultations/reforming-the-mental-health-act">Reforming the Mental Health Act</a></li>
+<li><a href="https://www.gov.uk/government/consultations/raising-standards-in-the-tax-advice-market">Raising standards in the tax advice market</a></li>
+<li><a href="https://www.gov.uk/government/consultations/call-for-evidence-the-tax-administration-framework-supporting-a-21st-century-tax-system">Call for evidence: the tax administration framework: supporting a 21st century tax system</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=open_consultation&amp;count=10">Source query from Search API</a></p>
 
