--- a/document-types/uk_market_conformity_assessment_body.html
+++ b/document-types/uk_market_conformity_assessment_body.html
@@ -333,7 +333,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: uk_market_conformity_assessment_body</h1>
 
-  <p>There are <strong>148</strong> pages with document type
+  <p>There are <strong>147</strong> pages with document type
 &lsquo;uk_market_conformity_assessment_body&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is not rendered by any apps. This could mean that the document
 type is not meant to be rendered (a redirect for example), or that there aren&rsquo;t
@@ -377,10 +377,10 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/intertek-testing-certification-ltd">Intertek Testing &amp; Certification LTD</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/ul-international-uk-ltd">UL International (UK) LTD</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/british-board-of-agrement">British Board of Agrément</a></li>
-<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/bre-global-ltd">BRE Global Ltd</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/lloyd-s-register-verification-ltd">Lloyd&rsquo;s Register Verification Ltd</a></li>
-<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/cem-international-ltd">CEM International Ltd</a></li>
-<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/warringtonfire-testing-and-certification-limited-trading-as-warringtonfire">Warringtonfire Testing and Certification Limited, trading as Warringtonfire </a></li>
+<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/bre-global-ltd">BRE Global Ltd</a></li>
+<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/satra-technology-centre-ltd">SATRA Technology Centre Ltd</a></li>
+<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/bsria-ltd">BSRIA LTD</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=uk_market_conformity_assessment_body&amp;count=10">Source query from Search API</a></p>
 
