--- a/apps/content-tagger.html
+++ b/apps/content-tagger.html
@@ -413,12 +413,12 @@
       <li><a href="https://www.gov.uk/transition" class="govuk-link">Brexit</a></li>
       <li><a href="https://www.gov.uk/world/spain" class="govuk-link">UK help and services in Spain</a></li>
       <li><a href="https://www.gov.uk/world/pakistan" class="govuk-link">UK help and services in Pakistan</a></li>
-      <li><a href="https://www.gov.uk/world/france" class="govuk-link">UK help and services in France</a></li>
       <li><a href="https://www.gov.uk/world/usa" class="govuk-link">UK help and services in USA</a></li>
+      <li><a href="https://www.gov.uk/world/france" class="govuk-link">UK help and services in France</a></li>
       <li><a href="https://www.gov.uk/world/india" class="govuk-link">UK help and services in India</a></li>
       <li><a href="https://www.gov.uk/world/germany" class="govuk-link">UK help and services in Germany</a></li>
       <li><a href="https://www.gov.uk/world/nigeria" class="govuk-link">UK help and services in Nigeria</a></li>
-      <li><a href="https://www.gov.uk/world/italy" class="govuk-link">UK help and services in Italy</a></li>
+      <li><a href="https://www.gov.uk/world/united-arab-emirates" class="govuk-link">UK help and services in United Arab Emirates</a></li>
       <li><a href="https://www.gov.uk/world/south-africa" class="govuk-link">UK help and services in South Africa</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
