--- a/document-types/correspondence.html
+++ b/document-types/correspondence.html
@@ -379,10 +379,10 @@
 <li><a href="https://www.gov.uk/government/publications/covid-19-letter-to-council-leaders-on-the-future-of-remote-meetings">COVID-19: Letter to council leaders on the future of remote meetings</a></li>
 <li><a href="https://www.gov.uk/government/publications/esfa-update-31-march-2021">ESFA Update: 31 March 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/letters-to-businesses-about-importing-and-exporting-goods-between-great-britain-and-the-eu">Letters to businesses about importing and exporting goods between Great Britain and the EU</a></li>
-<li><a href="https://www.gov.uk/government/publications/chancellor-responds-to-the-first-ots-report-on-inheritance-tax">Chancellor responds to the first OTS report on Inheritance Tax</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-covid-19-supporting-the-reopening-of-outdoor-hospitality">Coronavirus (COVID-19): Supporting the reopening of outdoor hospitality</a></li>
-<li><a href="https://www.gov.uk/government/publications/esfa-update-17-march-2021">ESFA Update: 17 March 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/chancellor-responds-to-the-first-ots-report-on-inheritance-tax">Chancellor responds to the first OTS report on Inheritance Tax</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-covid-19-letter-from-dvsa-chief-executive-to-driver-and-rider-trainers-about-restart-and-recovery-of-services">Coronavirus (COVID-19): letter from DVSA Chief Executive to driver and rider trainers about restart and recovery of services</a></li>
+<li><a href="https://www.gov.uk/government/publications/letter-from-chancellor-rishi-sunak-and-business-secretary-kwasi-kwarteng-to-businesses-on-the-governments-plan-for-growth">Letter from Chancellor Rishi Sunak and Business Secretary Kwasi Kwarteng to businesses on the government’s Plan for Growth</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=correspondence&amp;count=10">Source query from Search API</a></p>
 
