--- a/document-types/document_collection.html
+++ b/document-types/document_collection.html
@@ -333,7 +333,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: document_collection</h1>
 
-  <p>There are <strong>4783</strong> pages with document type
+  <p>There are <strong>4782</strong> pages with document type
 &lsquo;document_collection&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -380,8 +380,8 @@
 <li><a href="https://www.gov.uk/government/collections/how-to-manually-check-your-payroll-calculations">Check your payroll calculations manually</a></li>
 <li><a href="https://www.gov.uk/government/collections/slides-and-datasets-to-accompany-coronavirus-press-conferences">Slides, datasets and transcripts to accompany coronavirus press conferences</a></li>
 <li><a href="https://www.gov.uk/government/collections/national-curriculum">National curriculum</a></li>
-<li><a href="https://www.gov.uk/government/collections/the-integrated-review-2021">The Integrated Review 2021</a></li>
 <li><a href="https://www.gov.uk/government/collections/eu-settlement-scheme-applicant-information">EU Settlement Scheme: applicant information</a></li>
+<li><a href="https://www.gov.uk/government/collections/tax-policies-and-consultations-spring-2021">Tax policies and consultations (Spring 2021)</a></li>
 <li><a href="https://www.gov.uk/government/collections/hm-revenue-and-customs-service-availability-and-issues">HMRC service availability and issues</a></li>
 <li><a href="https://www.gov.uk/government/collections/guidance-for-schools-coronavirus-covid-19">Guidance for schools: coronavirus (COVID-19)</a></li>
 </ul>
