--- a/document-types/medical_safety_alert.html
+++ b/document-types/medical_safety_alert.html
@@ -382,7 +382,7 @@
 <li><a href="https://www.gov.uk/drug-device-alerts/class-3-medicines-recall-thame-laboratories-itraconazole-10mg-slash-ml-oral-solution-el-21-a-slash-08">Class 3 Medicines Recall: Thame Laboratories, Itraconazole 10mg/ml Oral Solution, EL (21)A/08</a></li>
 <li><a href="https://www.gov.uk/drug-device-alerts/changes-to-mhra-drug-alert-titles-and-categories">Changes to MHRA Drug alert titles and classification</a></li>
 <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-1-to-5-march-2021">Field Safety Notices: 1 to 5 March 2021</a></li>
-<li><a href="https://www.gov.uk/drug-device-alerts/class-4-medicines-defect-information-diazepam-2mg-slash-5ml-oral-solution-sugar-free-el-21-a-slash-07-pl-0142-slash-0103">Class 4 Medicines Defect Information, Diazepam 2mg/5ml Oral Solution Sugar Free (EL (21)A/07) (PL 0142/0103)</a></li>
+<li><a href="https://www.gov.uk/drug-device-alerts/class-4-medicines-defect-information-advanz-pharma-zapain-30mg-500mg-tablets-codeine-phosphate-paracetamol-pl12762-0034-el-20-a-01">Class 4 Medicines Defect Information: Advanz Pharma  Zapain 30mg/500mg Tablets (Codeine Phosphate /Paracetamol), PL12762/0034, (EL(20)A/01) </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=medical_safety_alert&amp;count=10">Source query from Search API</a></p>
 
