--- a/document-types/topic.html
+++ b/document-types/topic.html
@@ -382,7 +382,7 @@
 <li><a href="https://www.gov.uk/topic/company-registration-filing/starting-company">Starting a company</a></li>
 <li><a href="https://www.gov.uk/topic/business-tax/self-employed">Self-employment</a></li>
 <li><a href="https://www.gov.uk/topic/mot/manuals">MOT manuals and special notices</a></li>
-<li><a href="https://www.gov.uk/topic/further-education-skills/apprenticeships">Apprenticeships</a></li>
+<li><a href="https://www.gov.uk/topic/benefits-credits/tax-credits">Tax credits</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=topic&amp;count=10">Source query from Search API</a></p>
 
