Hourly scheduled redeploy 80eed232c4c17e270cb3c93526b231089bc080dc

--- a/content-schemas/specialist_document.html
+++ b/content-schemas/specialist_document.html
@@ -299,6 +299,9 @@
             <a href="/content-schemas/simple_smart_answer.html"><span>simple_smart_answer</span></a>
           </li>
           <li>
+            <a href="/content-schemas/smart_answer.html"><span>smart_answer</span></a>
+          </li>
+          <li>
             <a href="/content-schemas/special_route.html"><span>special_route</span></a>
           </li>
           <li>
