--- a/content-schemas/simple_smart_answer.html
+++ b/content-schemas/simple_smart_answer.html
@@ -304,6 +304,9 @@
               </ul>
           </li>
           <li>
+            <a href="/content-schemas/smart_answer.html"><span>smart_answer</span></a>
+          </li>
+          <li>
             <a href="/content-schemas/special_route.html"><span>special_route</span></a>
           </li>
           <li>
