--- a/content-schemas/special_route.html
+++ b/content-schemas/special_route.html
@@ -299,6 +299,9 @@
             <a href="/content-schemas/simple_smart_answer.html"><span>simple_smart_answer</span></a>
           </li>
           <li>
+            <a href="/content-schemas/smart_answer.html"><span>smart_answer</span></a>
+          </li>
+          <li>
             <a href="/content-schemas/special_route.html" class="toc-link--in-view"><span>special_route</span></a>
               <ul>
                 <li><a href="#frontend-schema">Frontend schema</a>
