--- a/content-schemas/unpublishing.html
+++ b/content-schemas/unpublishing.html
@@ -299,6 +299,9 @@
             <a href="/content-schemas/simple_smart_answer.html"><span>simple_smart_answer</span></a>
           </li>
           <li>
+            <a href="/content-schemas/smart_answer.html"><span>smart_answer</span></a>
+          </li>
+          <li>
             <a href="/content-schemas/special_route.html"><span>special_route</span></a>
           </li>
           <li>
