--- a/manual/cookie-consent-on-govuk.html
+++ b/manual/cookie-consent-on-govuk.html
@@ -178,6 +178,13 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
             
   <p><a href='/manual.html#cookies'>Cookies</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/669ef112efe4956f363adaec001079e6ca189dcc">6 Oct 2020</a>
 </div>
