Hourly scheduled redeploy 6d2a0321d971576944928552bd9a19853cd276c6

--- a/apps/govuk-docker/compatibility.html
+++ b/apps/govuk-docker/compatibility.html
@@ -647,7 +647,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-docker/commit/f0d2cbd7c07c79235ca60c9896cfab9942687f88">31 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-docker/commit/2dfdb9da1f16959f73ec4acf7714058a8b950e7c">7 Apr 2021</a>
 </div>
 
   <h1 class="page-title">govuk-docker: Compatibility</h1>
@@ -721,11 +721,7 @@
 <li>✅ link-checker-api</li>
 <li>✅ local-links-manager</li>
 <li>✅ manuals-frontend</li>
-<li>⚠ manuals-publisher
-<ul>
-<li><strong>TODO: Missing support for a webserver stack</strong></li>
-</ul>
-</li>
+<li>✅ manuals-publisher</li>
 <li>✅ mapit</li>
 <li>✅ maslow</li>
 <li>✅ publisher</li>
