--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/289214.es-419">Discurso de Su Majestad la Reina Isabel II con motivo de la Visita de Estado del Presidente de México, Enrique Peña Nieto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--41">Turks and Caicos Post Cabinet Meeting Statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/254304.es-419">Especialistas ingleses del College of Policing entrenan personal del ECU 911 - Ecuador</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/natural-gas-and-crude-oil-business-delegation">Natural Gas and Crude Oil Business Delegation</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175727.es-419">Entrevista con el medallista olímpico venezolano Rubén Limardo</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/projects-funded-by-the-uk-fcos-global-prosperity-fund--2">Projects funded by the UK FCO’s Global Prosperity Fund</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238189.lt">Williamas Hague&#39;as palankiai vertina JT narių įsipareigojimus</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--2">British expatriates - it’s your vote, don’t lose it</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284868.es-419">ProInversión inicia capacitación a gobiernos regionales y locales en APP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
