Hourly scheduled redeploy fda10710311541600c6bf8b39a6428a98db5eae8

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207016.pt">Rede Britânica de Ciência e Inovação traz palestra do carro mais veloz do mundo a estudantes e professores do SENAI-SP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/283719.es-419">Fiscal de la Nación recibió al Crown Prosecution Service</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/172849.pt">UKTI busca brasileiros para participar de festival</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/289214.es-419">Discurso de Su Majestad la Reina Isabel II con motivo de la Visita de Estado del Presidente de México, Enrique Peña Nieto</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--41">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/254304.es-419">Especialistas ingleses del College of Policing entrenan personal del ECU 911 - Ecuador</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/natural-gas-and-crude-oil-business-delegation">Natural Gas and Crude Oil Business Delegation</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
